--- a/views/newProject.hbs
+++ b/views/newProject.hbs
@@ -1,10 +1,11 @@
 <div class="formLogin"><br>
-<h4>Cadestre quantos projetos qusier e monstre para todo mundo o que vocês faz!</h4>
+    <h4>Cadastre quantos projetos quiser e mostre para todo mundo o que você faz!</h4>
+
     <form action="/services/new" method="post" enctype="multipart/form-data">
         <input type="text" name="serviceTitle" placeholder="Insira um título para o seu projeto.">
         <input type="text" name="serviceDescription" placeholder="Descreva o seu projeto.">
-        <h6>Insira fotos do seu projeto para valorizar ainda mais o seu trabalho.</h6>
+        <h6>Insira fotos dos seus projetos para valorizar ainda mais o seu talento.</h6>
         <input type="file" name="imageProject" placeholder="Link das fotos do projeto.">
-        <button type="submit">Cadastar projeto!</button>
+        <button type="submit">Cadastrar projeto!</button>
     </form>
 </div>
