--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,3 @@
-<h1>Erro na aplicação, verifique o console do seu terminal</h1>
+<h1>Erro na aplicação, verifique o console do seu terminal!</h1>
 
 <a href="/home">Home</a>
