--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
         <img class="logo" src="/images/logo.gif" alt="logo-photo">
         <nav>
             <ul class="nav_links">
-                <li><a href="/home">Início</a></li>
+                <li><a href="/">Início</a></li>
                 {{#if user}}
                     <li><a href="/services">Serviços</a></li>
                 {{#if isProfessional}}
