--- a/views/home.hbs
+++ b/views/home.hbs
@@ -36,7 +36,7 @@
 <footer>
 
     <ul class="nav_links_footer">
-        <li><a href="/home">Início</a></li>
+        <li><a href="/">Início</a></li>
         {{#if user}}
             <li><a href="/services">Serviços</a></li>
             {{#if isProfessional}}
